# agent-auth

./: KYA_BUILD_SPEC.md  KYA_MPGS_Integration_Guide.md  KYA_MPGS_Postman_Collection.json  README.md  run.sh
docs/: KYA_Agentic_Payments_Mastercard.md
kya/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
kya/opa/policies/kya/: main.rego
kya/src/kya/: __init__.py  config.py  database.py  dependencies.py  main.py  middleware.py  redis_client.py  sandbox.py
kya/src/kya/models/db/: __init__.py  agent.py  audit_log.py  delegation.py  intent_token.py  stepup_challenge.py  tenant.py
kya/src/kya/routers/: agents.py  audit.py  delegations.py  intent.py  revoke.py  stepup.py  verify.py
kya/src/kya/schemas/api/: agents.py  audit.py  delegations.py  intent.py  revoke.py  stepup.py  verify.py
kya/src/kya/services/: audit.py  delegation.py  identity.py  intent.py  policy.py  revocation.py  risk.py  stepup.py  verification.py
kya/src/kya/templates/: index.html
kya/src/kya/utils/: crypto.py  hashing.py  time.py
kya/tests/: conftest.py
kya/tests/integration/: test_agents_router.py  test_verify_endpoint.py
kya/tests/unit/: test_audit_service.py  test_crypto.py  test_delegation_service.py  test_identity_service.py  test_intent_service.py  test_policy_engine.py
